switch to using icu converter for utf16be

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,10 @@ METASOURCES = AUTO
 pkgplugindir=$(MYSQL_PLUGIN_DIR)
 pkgplugin_LTLIBRARIES = libmysql-icu.la
 
-#EXTRA_CFLAGS = -DHAVE_UNICODE_UCOL_H -DHAVE_CHARSET_ucs2 -DHAVE_CHARSET_utf8
-EXTRA_CFLAGS = -DHAVE_CHARSET_utf8 -DMYSQL_DYNAMIC_PLUGIN
+# This may need modifying if you don't have ucs2 enabled
+# check if which collations you have with
+# mysql> show collation;
+EXTRA_CFLAGS = -DHAVE_CHARSET_utf8 -DHAVE_CHARSET_ucs2 -DMYSQL_DYNAMIC_PLUGIN
 
 libmysql_icu_la_CFLAGS = $(ICU_CFLAGS) $(MYSQL_CFLAGS) $(EXTRA_CFLAGS)
 libmysql_icu_la_LDFLAGS = $(ICU_LDFLAGS) $(MYSQL_LDFLAGS)
